Fixed bug in expand/collapse of mobile refine controls.

--- a/styles/_search-refine-controls-mobile.sass
+++ b/styles/_search-refine-controls-mobile.sass
@@ -17,7 +17,7 @@
         font-weight: 600
         height: 50px
         line-height: 50px
-        margin: 20px 30px
+        margin: 30px
         text-align: center
 
     .search-refine-popup-mobile
